--- a/unit_4/css/styles.css
+++ b/unit_4/css/styles.css
@@ -1,20 +1,26 @@
-body {background-color: #FFF9E6;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&family=Roboto+Slab&display=swap');
+body {
+	font-family: 'Roboto Slab', serif;
+	background-color: #FFF9E6;
 	color: #999999;
-	font-family: serif;
-font-style: normal;
-font-size: 14pt; 
-text-align: center;
+	font-style: normal;
+	font-size: 14pt; 
+	text-align: center;
 }
 
-h1{font-size: 36pt;}
+h1{
+	font-size: 36pt;
+	font-family: 'Noto Sans JP', sans-serif;}
 
-#slogan {font-size: 26pt;
-font-style: italic;
-font-weight: bold;
-color: #2073E8;
-text-decoration: underline;
+#slogan {
+	font-size: 26pt;
+	font-style: italic;
+	font-weight: bold;
+	color: #2073E8;
+	text-decoration: underline;
 }
 
-li{font-style: italic;
+li{
+	font-style: italic;
 	list-style-type: none;
 }
