--- a/unit_6/css/styles.css
+++ b/unit_6/css/styles.css
@@ -38,6 +38,7 @@ nav a {
 a { 
 	background-color: #EEEDEB;
 	color: black;
+	
 	text-decoration: none;
 	display: block;
 	
@@ -50,8 +51,19 @@ li  {
 }
 
 footer{
-	background-color: #FFE2B8;
+	background-color: #EEEDEB;
 	display: block;
+	float: right;
+	width: 960px;
+}
+
+footer a{
+	background-color: #EEEDEB;
+	color: #899E7A;
+	text-decoration: none;
+	display: inline-block;
+	margin: 1.5em;
+	padding: 20px;
 	float: right;
 }
 
