--- a/unit_6/css/styles.css
+++ b/unit_6/css/styles.css
@@ -1,21 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&family=Poly&display=swap');
+* { margin:0; padding:0; box-sizing:border-box; }
+@keyframes shadow-pulse
+{
+     0% {
+          box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+     }
+     100% {
+          box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+     }
+}
 
 header {
-	background-color: #fffff; 
-	display: block;
-	width: 960px;
-	clear: both;
+	background-color: #EEEDEB; 
+	display: inline block;
+	width: 1200px;
 }
 
 
+body{
+	background-color: #EEEDEB; 
+}
+
 nav {
-	background-color: #EEEDEB;
 	font-family: 'Noto Sans', sans-serif;
 	float: left;
-	font-size: 1.2em;
-	width: 960px;
-	clear: both;
-
+	font-size: 1.5em;
 
 }
 
@@ -25,8 +34,7 @@ nav a {
 	text-decoration: none;
 	display: inline-block;
 	margin: 1.5em;
-	padding: 20px;
-	float: right;
+	padding: 40px 20px 0px 20px;
 
  }
 
@@ -45,16 +53,11 @@ a {
  }
 
 
-li  {
-	list-style: none;
-	padding: 20px;
-}
-
 footer{
 	background-color: #EEEDEB;
 	display: block;
-	float: right;
-	width: 960px;
+	width: 1200px;
+	height: 200px;
 }
 
 footer a{
@@ -65,6 +68,7 @@ footer a{
 	margin: 1.5em;
 	padding: 20px;
 	float: right;
+
 }
 
 
@@ -76,139 +80,143 @@ body {
 }
 
 h1{
-	font-size: 32pt;
+	font-size: 28pt;
 	font-family: 'Poly', serif;
 	color: black;
 	padding: 10px;
 	float: left;
-	margin: 10px;
+	margin: 20px;
 
 }
 
 h2 {
-	font-size: 52px;
+	font-size: 62px;
 	font-family: 'Poly', serif;
 	color: black;
 	float: right;
-	display: block;
-	padding: 100px 40px 0px 20px;
+	padding: 50px 40px 0px 20px;
 
+}
+
+h3 {
+	font-size: 24px;
+	font-family: 'Noto Sans', sans-serif;
+	font-weight: 400;
+	color: grey;
+	float: right;
+	padding: 30px 40px 0px 20px;
+
+}
+
+input[type=text] {
+  width: 50%;
+  padding: 16px 20px;
+  margin: 10px 20px;
+  box-sizing: border-box;
+  font-size: 18px;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+  background-color: #899E7A;
+  border: none;
+  color: white;
+  padding: 16px 20px;
+  text-decoration: none;
+  margin: 10px 10px;
+  cursor: pointer;
+  font-size: 16px;
 }
 
 
 #main-image {
 	float: left;
-	display: block;
+	display: inline block;
 	background-color: #EEEDEB;
 	padding: 30px 10px 0px 70px;
-	width: 420px;
+	clear: both;	
 }
 
-
-#cta {
-	float: right;
-	display: block;
-	padding: 0px 40px 23px 20px;
-	clear: both;
-}
-
-#cta a {
-	padding: 10px 30px 10px 30px;
-	background-color: #899E7A;
-	display: block;
-	font-size: 18px;
-	color: white;
-}
-
-#cta a:hover {
-	color: black;
-}
-
-
-
-#wrapper{
-	background-color: #FFF68F;
-	width: 960px;
-	margin: auto;
-}
 
 #hero-module {
-	background-color: #ffffff;
-	width: 960px;
-	display: block;
+	background-color: #EEEDEB;
+	width: 1200px;
+	height: 500px;
+	display: inline block;
 	
 }
 
 #content-module {
-	background-color: #000000;
-	width: 960px;
-
+	background-color: white;
+	width: 1800px;
+	margin: 30px 0px 30px 0px;
 }
 
 #hero-right {
-	width: 420px;
 	float: right;
 	background-color: #EEEDEB;
 	padding: 20px;
+	width: 700px;
+	
 }
 
-
-#column-one {
-	background-color: #899E7A;
-	width: 200px;
-	height: 100px;
-	float: left;
-	padding: 25px;
-	margin: 30px;
-	clear: both;	
-}
-
-#column-one a{
-	background-color: #899E7A;
-	font-size: 32px;
-	color: white;
-	text-align: center;
-}
-
-
-#column-two {
-	background-color: #899E7A;
-	width: 200px;
-	height: 100px;
-	float: left;
-	padding: 25px;
-	margin: 30px;
-}
-
-
-#column-two a{
-	background-color: #899E7A;
-	font-size: 32px;
-	color: white;
-	text-align: center;
-}
-
-#column-three {
-	background-color: #899E7A;
-	width: 200px;
-	height: 100px;
-	float: left;
-	padding: 25px;
-	margin: 30px;
-}
-
-#column-three a{
-	background-color: #899E7A;
-	font-size: 32px;
-	color: white;
-	text-align: center;
-}
 
 #subscribe {
-	background-color: #FF957E;
-	clear: both;
+	background-color: #EEEDEB;
+	display: block;
+	width: 1200px;
+	height: 150px;
+	font-size: 24px;
+	font-family: 'Noto Sans', sans-serif;
+	font-weight: 400;
+	color: grey;
 }	
 
+.button {
+	padding: 50px;
+	background-color: #899E7A;
+	display: block;
+	font-size: 32px;
+	color: white;
+	margin: 25px;
+	width: 250px;
+	height: 150px;
+	float: left;
+	text-align: center;
+}
+
+
+.button:hover {
+	color: black;
+}
+
+.cta {
+	padding: 10px 30px 10px 30px;
+	background-color: #899E7A;
+	display: block;
+	font-size: 32px;
+	color: white;
+	float: right;
+	margin: 40px;
+	animation: shadow-pulse 1s 3;
+}
+
+.cta:hover {
+	color: black;
+}
+
+.sub{
+	font-size: 18px;
+	padding:40px 20px 20px 20px;
+	margin: 20px 0px 0px 10px;
+}
+
+.footernav {
+	font-family: 'Noto Sans', sans-serif;
+	float: right;
+	font-size: 14px;
+	padding: 20px;
+
+}
 
 	
 .clearfix:after {
